--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 distro==1.9.0
-Flask==3.1.2
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -25,3 +24,6 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+Flask>=3.0
+flask-limiter>=3.7
+openai>=1.43
